Update openapi spec
